--- a/projects/1-form-validator/index.html
+++ b/projects/1-form-validator/index.html
@@ -13,41 +13,25 @@
         <!-- username -->
         <div class="form-control">
           <label for="username">Username</label>
-          <input
-            type="text"
-            name="username"
-            id="username"
-          />
+          <input type="text" name="username" id="username" />
           <small>Error msg</small>
         </div>
         <!-- email -->
         <div class="form-control">
           <label for="email">Email</label>
-          <input
-            type="text"
-            name="email"
-            id="email"
-          />
+          <input type="text" name="email" id="email" />
           <small>Error msg</small>
         </div>
         <!-- password -->
         <div class="form-control">
           <label for="password">Password</label>
-          <input
-            type="text"
-            name="password"
-            id="password"
-          />
+          <input type="text" name="password" id="password" />
           <small>Error msg</small>
         </div>
         <!-- confirm-password -->
         <div class="form-control">
           <label for="password2">Confirm your password</label>
-          <input
-            type="text"
-            name="password2"
-            id="password2"
-          />
+          <input type="text" name="password2" id="password2" />
           <small>Error msg</small>
         </div>
         <input type="submit" class="btn" value="Submit!" />
